--- a/gb/24/8/10/n14308673.md
+++ b/gb/24/8/10/n14308673.md
@@ -138,7 +138,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307761.md#1">奥运台湾代表团拜会巴黎勒瓦卢瓦市府</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307802.md#1">奥运冲浪比赛有“鲸喜” 鲸鱼跃出海面抢镜</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/9/n11709371.md#1" target="_blank">袁斌：汉学家林培瑞认清中共谎言的觉醒之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/5/n9927251.md#1" target="_blank">澄清长江日报诽谤文章 武汉退休干部的故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/14/n2965989.md#1" target="_blank">鲜为人知的马克思之三：虚荣的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/11/13/n2327659.md#1" target="_blank">法轮功简介</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
